fixed lead block spacing

--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -10,7 +10,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    padding: 0 148px;
+    padding: 0 48px;
     max-width: 1280px;
     margin: 56px auto 0;
 }
